# motion_planning

./: .gitignore  README.md
docker_image/: README.md  server.sh
extra_plugins/car_demo/car_demo/launch/: demo.launch
extra_plugins/hagen_msgs/: CMakeLists.txt  package.xml
extra_plugins/hagen_msgs/msg/: PoseCommand.msg
extra_plugins/rviz_plugins/src/: pose_tool.cpp  pose_tool.h
extra_plugins/tracking_control/: CMakeLists.txt  package.xml
extra_plugins/tracking_control/src/scripts/: Controller_Read_Me.txt  prius_pub.py
extra_plugins/tracking_control/src/scripts/controllers/: AdpPID_velocity_controller.py  PID_MIT_velocity_controller.py  PID_velocity_controller.py
extra_plugins/tracking_control/src/scripts/tracking_Methods/: PID_steering.py  lqr.py  lqr_steering_and_velocity_controller.py  mpc.py  pure_pursuit.py  stanley_method.py
extra_plugins/tracking_control/src/scripts/tuners/: AdpPID_velocity_tuner.py  PID_MIT_velocity_tuner.py  PID_velocity_tuner.py
extra_plugins/waypoint_navigation_plugin/: CMakeLists.txt  LICENSE  README.md  package.xml  waypoint_nav_plugin_description.xml
extra_plugins/waypoint_navigation_plugin/launch/: rviz.launch  waypoint_nav_plugin.rviz  waypoint_navigation_plugin.rviz
extra_plugins/waypoint_navigation_plugin/media/: flag.dae
extra_plugins/waypoint_navigation_plugin/src/: waypoint_nav_frame.cpp  waypoint_nav_frame.h  waypoint_nav_tool.cpp  waypoint_nav_tool.h
extra_plugins/waypoint_navigation_plugin/ui/: WaypointNavigation.ui
frenet_frame/: vector_value_function.py
introduction_to_optimization/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_10.py  task_11.py
model_predictive_control/: direct_collocation_todo.py  multiple_shotting.py  multiple_shotting_plot_result.py  multiple_shotting_todo.py  quadcopter.py  quadrotor_mpc_cvxpy_osqp.py  quadrotor_mpc_osqp.py
motion_planner/: CMakeLists.txt  package.xml
motion_planner/cfg/: costmap_common.yaml  costmap_exploration.yaml  costmap_final.yaml  costmap_global.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  frenet_planner.yaml  laser_filter.yaml
motion_planner/cmake/: FindGLog.cmake
motion_planner/include/: State.h  a_star.h  alg_utils.hpp  data_type.h  data_utils.h  grid_graph.h  kinematic_a_star.h  kino_a_star.h  planner.h  robot_state.h  rrt.h  rrt_star.h  rs_paths.h  types.hpp  vis_utils.h
motion_planner/launch/: motion_planner.launch
motion_planner/launch/rviz_config/: jps_demo.rviz  motion_planner.rviz
motion_planner/src/: a_star.cpp  a_star_todo.cpp  grid_graph.cpp  kinematic_a_star.cpp  kino_a_star_todo.cpp  planner.cpp  random_complex_generator.cpp  rr_star.cpp  rr_star_todo.cpp  rrt.cpp  rrt_todo.cpp  rs_paths.cpp  run_planner.cpp  vis_utils.cpp
motion_planning_alg/: .gitignore  CMakeLists.txt  README.md
motion_planning_alg/data/: reference_curvature.npy  reference_x.npy  reference_y.npy  reference_yaw.npy  t.npy  traversed_path_x.npy  traversed_path_y.npy  u_cl.npy  waypoints_x.npy  waypoints_y.npy  xs.npy  xx0.npy  xx1.npy
motion_planning_alg/include/: cubic_spline_interpolation.h  data_type.h  lqr_controller.h  lqr_controller_todo.h  minimum_acceleration_obvp.h  motion_model.h  root_finder.h
motion_planning_alg/scripts/: cubic_spline_trajectory_generator.py  plot_trajectory.py
motion_planning_alg/src/: cubic_spline_planner.cpp  cubic_spline_todo.cpp  lqr_controller.cpp  main.cpp  mpc_multiple_shooting.cpp  reference_trajectory_generator.cpp  reference_trajectory_generator_todo.cpp
variation_of_calculus/: qt1.py  qt2.py
