<?xml version="1.0"?>
<package>
  <name>motion_planner</name>
  <version>0.0.1</version>
  <description> Motion planning </description>
  <maintainer email="ggeesara@gmail.com">GPrathap</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
   
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <export>

  </export>
</package>
