<package format="2">
  <name>waypoint_navigation_plugin</name>
  <version>0.1.0</version>
  <description>
     Tool for planting waypoints in rviz.
  </description>
  <maintainer email="tdineshd@gmail.com">Dinesh Thakur</maintainer>
  <license>BSD</license>

  <author>Dinesh Thakur</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/waypoint_nav_plugin_description.xml"/>
  </export>
</package>
